--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,19 @@ services:
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
 
+  postgres_test:
+    image: postgres:latest
+    container_name: authentificationgo_test_db
+    restart: no
+    environment:
+      POSTGRES_USER: test_admin
+      POSTGRES_PASSWORD: test_secret
+      POSTGRES_DB: authentificationgo_test
+    ports:
+      - "5434:5432"
+    volumes:
+      - ./postgres_test_data:/var/lib/postgresql/data
+
 volumes:
   postgres_data:
+  postgres_test_data:
