--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: up database
+        run: docker-compose up -d
+
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
